feat ngdu search ready && feat get graph by object ready
