# back/src/modules/ngdu/ngdu.routes.ts
@@ -1,0 +1,10 @@
+import { Router } from 'express';
+
+import * as ngduController from './ngdu.controller';
+
+const router = Router();
+
+router.get('/list', ngduController.getNgduList);
+router.post('/graph', ngduController.getNgduGraph);
+
+export default router;
